--- a/src/app/listado-usuarios/listado-usuarios.component.html
+++ b/src/app/listado-usuarios/listado-usuarios.component.html
@@ -79,6 +79,9 @@
 
                       <button2> <i class="material-icons editable-row" (click)="showModalEliminar(item.id)">delete</i>
                       </button2>
+                      <button3 (click)="toggleButtonState()">
+                        <i class='material-icons toggle_on' [ngClass]="{'active': isToggleOn, 'inactive': !isToggleOn}">{{ isToggleOn ? 'toggle_on' : 'toggle_off' }}</i>
+                      </button3>
                     </td>
 
                   </tr>
