--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,40 +3,37 @@
     <div class="login-text">
       <div class="logo-container">
         <img src="assets/img/log.png" alt="">
-
-
-
       </div>
-
       <span class="fa-stack fa-2x">
-        <i class="fa fa-user fa-stack-1x"></i>
+        <i class="fa fa-user fa-stack-1x"> </i>
       </span>
-
     </div>
 
+    
+    <!-- Username Input with Icon -->
+    <div class="input-container">
+      <span class="input-icon">
+        <i class="fa fa-user"></i>
+      </span>
+      <input type="email" class="login-username" autofocus="true" required="true" placeholder="Usuario" formControlName="usuario" />
+    </div>
 
-
-
-    <input type="email" class="login-username" autofocus="true" required="true" placeholder="Usuario"
-      formControlName="usuario" />
-
-    <input type="password" class="login-password" required="true" placeholder="Contraseña"
-      formControlName="contrasena" />
-
+    <!-- Password Input with Icon -->
+    <div class="input-container">
+      <span class="input-icon">
+        <i class="fa fa-lock"></i>
+      </span>
+      <input type="password" class="login-password" required="true" placeholder="Contraseña" formControlName="contrasena" />
+    </div>
 
     <input type="submit" name="Login" value="Ingresar" class="login-submit" (click)="login()" />
 
     <div class="register-link" *ngIf="!hayUsuarios">
       ¿No tienes cuenta? <a (click)="crearUsuario()">Regístrate</a>
     </div>
-
-
-    <br>
   </form>
 
-  <div class="underlay-photo "> </div>
+  <div class="underlay-photo "></div>
   <div class="underlay-black"></div>
   <router-outlet></router-outlet>
-
-
 </div>
