--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,7 +25,7 @@
                     ID
                   </th>
                   <th>
-                    Tipo Menú
+                    Plato
                   </th>
                   <th>
                     Cantidad de Plato
@@ -47,10 +47,10 @@
                       {{i+1}}
                     </td>
                     <td>
-                      {{item.tipo_menu.tipo}}
+                      {{item.plato.descripcion}}
                     </td>
                     <td>
-                      {{item.cantidad_plato.cantidad}}
+                      {{item.cantidad}}
                     </td>
                     <td>
                       {{item.fecha}}
@@ -99,18 +99,18 @@
 
           <div class="form-row">
             <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr text-center">Tipo Menú</label> <br>
+              <label for="inputState" class="select-gr text-center">Plato</label> <br>
               <div class="custom-dropdown" [class.show-more-options]="showMoreOptions">
                 <div class="selected-option" (click)="toggleShowMoreOptions()">
                   {{ getSelectedOptionLabel() }}
                   <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
                 </div>
                 <div class="options-container">
-                  <ng-container *ngFor="let item of tipomenusss">
+                  <ng-container *ngFor="let item of platosss">
                     <div class="option example-full-width estilos" *ngIf="!showMoreOptions && index >= 7"
-                      (click)="selectOption(item)">{{ item.tipo }}</div>
+                      (click)="selectOption(item)">{{ item.descripcion }}</div>
                     <div class="option estil editable-row" *ngIf="showMoreOptions" (click)="selectOption(item)">{{
-                      item.tipo }}</div>
+                      item.descripcion }}</div>
                     <div *ngIf="showId_tipomenuError" class="text-danger">Campo requerido</div>
                   </ng-container>
                 </div>
@@ -120,31 +120,14 @@
             </div>
           </div>
 
+          
           <div class="form-row">
             <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr text-center">Cantidad</label> <br>
-              <div class="custom-dropdown" [class.show-more-options]="showMoreOptionscantidadplato">
-                <div class="selected-option" (click)="toggleShowMoreOptionscantidadplato()">
-                  {{ getSelectedOptionLabelcantidadplato() }}
-                  <img src="assets/img/flecha-hacia-abajo.png" alt="" class="down-arrow">
-                </div>
-                <div class="options-container">
-                  <ng-container *ngFor="let item of cantidadplatosss">
-                    <div class="option example-full-width estilos" *ngIf="!showMoreOptionscantidadplato && index >= 7"
-                      (click)="selectOptioncantidadplato(item)">{{ item.cantidad }}</div>
-                    <div class="option estil editable-row" *ngIf="showMoreOptionscantidadplato"
-                      (click)="selectOptioncantidadplato(item)">{{ item.cantidad }}</div>
-                    <div *ngIf="showId_cantidadplatoError" class="text-danger">Campo requerido</div>
-                  </ng-container>
-                </div>
-              </div>
-
-
+              <label for="inputState" class="select-gr">Cantidad platos</label> <br>
+              <input class="example-full-width estilos" type="text" formControlName="cantidad">
+              <div *ngIf="showId_cantidadplatoError" class="text-danger">Campo requerido</div>
             </div>
           </div>
-
-
-
 
           <div class="form-row">
             <div class="form-group col-md-8">
@@ -156,7 +139,7 @@
 
           <div class="form-row">
             <div class="form-group col-md-8">
-              <label for="inputState" class="select-gr">Descripción</label> <br>
+              <label for="inputState" class="select-gr">Fecha</label> <br>
               <input class="example-full-width estilos" type="date" formControlName="fecha">
               <div *ngIf="showFechaError" class="text-danger">Campo requerido</div>
             </div>
