--- a/src/app/ingredientes/ingredientes.component.scss
+++ b/src/app/ingredientes/ingredientes.component.scss
@@ -6,6 +6,7 @@ img {
 .texto-grueso {
   font-weight: bold;
   font-size: 22px;
+
 }
 
 
@@ -53,8 +54,11 @@ button2 {
 h5 {
   font-size: larger;
   color: rgb(255, 255, 255);
-  text-align: center;
+ // width: 1115px;
+  margin: 0 auto; /* Esto centrará el h5 horizontalmente */
+ // text-align: center; /* Esto centrará el texto dentro del h5 */
 }
+
 
 .disabled {
   font-weight: bold;
@@ -96,10 +100,11 @@ th {
   /* Removemos todos los bordes */
   border-bottom: 1px solid #888888;
   /* Agregamos solo el borde inferior */
-  width: 190px;
+  width: 910px;
   font-size: 18px;
   
 }
+
 
 .estilosss {
   content: "";
@@ -124,20 +129,35 @@ th {
 
   font-size: 18px;
 }
+/*----------------para la modal----------------------------------*/
+.tam{
+  width: 1000px;
+  
+}
 
+.tam1{
+  width: 1130px;
+  
+}
 .heads {
-  width: 500px;
+  width: 1000px;
   display: flex;
-  justify-content: center;
+  //justify-content: center;
   align-items: center;
 }
+
 
 header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+.modal-dialog {
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .x {
 
   height: 80px;
@@ -163,7 +183,7 @@ header {
 
   background-color: #fff;
   border: 2px solid #ccc;
-  max-height: 200px;
+  max-height: 500px;
   overflow-y: auto;
   z-index: 1;
 
@@ -231,12 +251,120 @@ header {
   /* Cambia el color a tu elección */
 }
 
+
+
 .modal-with-padding {
   padding-left: 40px; /* Ajusta el valor según el espacio deseado */
   padding-right: 30px; /* Ajusta el valor según el espacio deseado */
+
 }
 
 /* Estilo para centrar horizontalmente el título del modal */
 .text-center {
   text-align: center;
+}
+
+
+.formmm {
+  width: 910px;
+  }
+
+.formmm2 {
+  width: 500px;
+  }
+
+/* Estilo para quitar bordes y sombreado del input */
+.form-control {
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+
+
+/* Estilo para hacer la letra más grande en el label */
+.label {
+  font-size: 18px; /* Ajusta el tamaño de la fuente según tus preferencias */
+  margin-right: 25px;
+  color: rgb(141, 130, 130);
+}
+/* Estilo para hacer el botón más largo */
+.btn-danger {
+  width: auto; /* Ancho automático para adaptarse al contenido */
+  display: inline-flex; /* Para colocar el icono al lado del texto */
+  align-items: center; /* Para alinear verticalmente el icono y el texto */
+}
+
+/* Estilo para el icono dentro del botón */
+.btn-danger i {
+  margin-left: 5px; /* Espacio entre el texto y el icono (ajusta según sea necesario) */
+}
+
+
+/* Estilos generales del contenedor de búsqueda */
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  
+}
+
+/* Estilos para el cuadro de búsqueda */
+.search-box {
+  flex: 1;
+  margin-right: 10px; /* Espacio entre el cuadro de búsqueda y el botón */
+  margin-right: 10px; 
+
+}
+
+/* Estilos para el botón de búsqueda */
+.btn-danger {
+  margin-left: 10px; /* Espacio entre el botón y el cuadro de búsqueda */
+}
+
+
+
+
+
+/* Centrar el título h5 */
+.modal-title {
+  text-align: center !important;
+}
+
+/* Centrar los botones "Cerrar" y "Guardar" */
+.modal-footer {
+  text-align: center !important;
+}
+
+/* Aplicar estilos solo a la modal con la clase "my-custom-modal" */
+.my-custom-modal .modal-title {
+  text-align: center;
+}
+
+.my-custom-modal .modal-footer {
+  text-align: center;
+}
+/* Estilo para centrar verticalmente el título h5 */
+.modal-header {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 15px; /* Ajusta este valor según sea necesario para centrar verticalmente */
+}
+
+/* Estilo para centrar horizontalmente los botones de la modal */
+.modal-footer {
+  justify-content: center;
+  padding-top: 15px; /* Ajusta este valor según sea necesario para centrar verticalmente */
+}
+
+/* Estilo para el botón Cerrar (X) en la modal */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
